--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html> <!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <!--
 Purpose: Enable Vercel Web Analytics and Speed Insights in production.
 Inputs: None; loads scripts from `/_vercel/...` relative paths on Vercel.
@@ -20,6 +20,7 @@ Author: @Goodnbad.exe
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/calma-website.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/rtl-fix.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
@@ -355,7 +356,7 @@ Author: @Goodnbad.exe
           </div>
           <div id="w-node-_31eeaa3b-f7cf-7ff9-354e-ab4000307f5e-84fc3f1c" class="w-layout-layout about-quickstack arabic wf-layout-layout">
             <div class="w-layout-cell">
-              <div data-delay="4000" data-animation="cross" class="about-slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="true" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="4" data-duration="500" data-infinite="false">
+              <div data-delay="4000" data-animation="cross" class="about-slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="4" data-duration="500" data-infinite="true">
                 <div class="w-slider-mask">
                   <div class="w-slide">
                     <div class="image-wrapper slider"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9750366210938px" srcset="images/Abou-1-p-500.jpg 500w, images/Abou-1-p-800.jpg 800w, images/Abou-1-p-1080.jpg 1080w, images/Abou-1-p-1600.jpg 1600w, images/Abou-1.JPG 1920w" alt="" src="images/Abou-1.JPG" loading="lazy" class="image"></div>
