Arabic home: hero overlay left inset, compact RTL spacing, hero reorder; mobile nav sync; aligned Ongoing Projects names

--- a/index.html
+++ b/index.html
@@ -213,60 +213,39 @@ Author: @Goodnbad.exe
           <div id="w-node-_2cdaa73e-f24f-02a5-619f-2e875e3b9122-84fc3f1c" class="hero-sticky-wrapper">
             <!-- Main hero layout using CSS Grid with Arabic text support -->
             <div id="w-node-cb1bcd9d-9b48-d2e7-9da1-ba58604cb21c-84fc3f1c" class="w-layout-layout hero-quickstack arabic wf-layout-layout">
-              <!-- Left cell containing the first hero image and project details -->
+              <!-- First cell: company logo and main heading (mirrors English order) -->
+              <div id="w-node-e27d47fe-a843-76ee-817e-64514b169b1a-84fc3f1c" class="w-layout-cell">
+                <div class="hero-left-div _1 arabic">
+                  <div class="left-content-div">
+                    <div class="hero-logo-div"><img src="images/Calma_Wordmark_Multilanguage.gif" loading="lazy" alt="" class="image"></div>
+                  </div>
+                  <div class="hero-heading-div">
+                    <h1 class="hero-heading arabic">نصنع</h1>
+                    <h1 class="hero-heading zigzag arabic">ملامح الغد.</h1>
+                  </div>
+                </div>
+              </div>
+              <!-- Second cell: first hero image and project details -->
               <div class="w-layout-cell">
-                <!-- Image wrapper that contains the hero image and overlaid project information -->
                 <div class="hero-image-wrapper">
-                  <!-- Responsive hero image with multiple sizes for different screen widths -->
-                  <!-- The 'loading="lazy"' improves page performance by loading image only when needed -->
-                  <!-- The 'sizes' attribute tells browser which image size to use based on viewport width -->
-                  <!-- The 'srcset' provides multiple image resolutions for optimal loading -->
                   <img src="images/Hero-2.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Hero-2-p-500.jpg 500w, images/Hero-2-p-800.jpg 800w, images/Hero-2-p-1080.jpg 1080w, images/Hero-2.JPG 1439w" alt="" class="image">
-                  <!-- Project details overlay that appears on top of the hero image -->
                   <div class="hero-project-details-wrapper arabic">
-                    <!-- Arabic subtitle indicating "Leading Project" -->
                     <h4 class="hero-sub-heading arabic">المشروع الرائد</h4>
-                    <!-- Project name/identifier -->
                     <h3 class="hero-project-name">GH220</h3>
                   </div>
                 </div>
               </div>
-              <!-- Right cell containing the second hero image and project details -->
+              <!-- Third cell: second hero image and project details -->
               <div class="w-layout-cell">
-                <!-- Right side container with specific styling class -->
                 <div class="hero-right-div _1">
-                  <!-- Middle container for additional layout control -->
                   <div class="hero-middle-div _1">
-                    <!-- Second image wrapper with same structure as the first -->
                     <div class="hero-image-wrapper">
-                      <!-- Second responsive hero image with same optimization techniques -->
                       <img src="images/Hero-1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Hero-1-p-500.jpg 500w, images/Hero-1-p-800.jpg 800w, images/Hero-1-p-1080.jpg 1080w, images/Hero-1.JPG 1439w" alt="" class="image">
-                      <!-- Second project details overlay -->
                       <div class="hero-project-details-wrapper arabic">
-                        <!-- Same Arabic subtitle for consistency -->
                         <h4 class="hero-sub-heading arabic">المشروع الرائد</h4>
-                        <!-- Project name in Arabic: "Tower One" -->
                         <h3 class="hero-project-name arabic">برج ون</h3>
                       </div>
                     </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Third cell containing the company logo and main heading -->
-              <div id="w-node-e27d47fe-a843-76ee-817e-64514b169b1a-84fc3f1c" class="w-layout-cell">
-                <!-- Left content area with Arabic text support -->
-                <div class="hero-left-div _1 arabic">
-                  <!-- Container for the company logo -->
-                  <div class="left-content-div">
-                    <!-- Company logo as animated GIF with multilanguage wordmark -->
-                    <div class="hero-logo-div"><img src="images/Calma_Wordmark_Multilanguage.gif" loading="lazy" alt="" class="image"></div>
-                  </div>
-                  <!-- Main heading section with company tagline -->
-                  <div class="hero-heading-div">
-                    <!-- First part of Arabic heading: "We create" -->
-                    <h1 class="hero-heading arabic">نصنع</h1>
-                    <!-- Second part with special zigzag styling: "features of tomorrow" -->
-                    <h1 class="hero-heading zigzag arabic">ملامح الغد.</h1>
                   </div>
                 </div>
               </div>
@@ -563,7 +542,6 @@ Author: @Goodnbad.exe
       <section class="section dark-green">
         <div class="w-layout-blockcontainer container arabic w-container">
           <div class="section-heading-wrapper flex arabic">
-            <div class="calma-logo-wrapper arabic"><img src="images/FULL-LOCKUP-04_1.png" loading="lazy" alt="" class="image"></div>
             <div class="content-wrapper">
               <div class="section-name-wrapper padding">
                 <h5 class="section-name dark arabic">ثقافة الشركة</h5>
@@ -572,6 +550,7 @@ Author: @Goodnbad.exe
                 <h2 class="section-heading dark arabic">نبني مجتمعات الغد.</h2>
               </div>
             </div>
+            <div class="calma-logo-wrapper arabic"><img src="images/FULL-LOCKUP-04_1.png" loading="lazy" alt="" class="image"></div>
           </div>
         </div>
         <div class="w-layout-blockcontainer container full w-container">
