fix(en): correct internal links and remove desktop.ini files
Update internal links in English pages to point to correct paths in /en/ directory
Remove unnecessary desktop.ini files from project images directories

--- a/en/financing-options.html
+++ b/en/financing-options.html
@@ -191,16 +191,16 @@
           <div id="w-node-_0beb339e-1953-658d-b0ff-7d739ede1b52-9ede1b44" class="download-div arabic">
             <h5 class="download-heading">Downloads</h5>
             <div class="download-element-div arabic">
-              <a href="../brochures.html" class="page-link w-inline-block">
+              <a href="../en/brochures.html" class="page-link w-inline-block">
                 <h5 class="download-text">Brochures</h5>
               </a>
-              <a href="../floorplans.html" class="page-link w-inline-block">
+              <a href="../en/floorplans.html" class="page-link w-inline-block">
                 <h5 class="download-text">Floorplans</h5>
               </a>
-              <a href="../factsheets.html" class="page-link w-inline-block">
+              <a href="../en/factsheets.html" class="page-link w-inline-block">
                 <h5 class="download-text">Factsheets</h5>
               </a>
-              <a href="../reports.html" class="page-link w-inline-block">
+              <a href="../en/reports.html" class="page-link w-inline-block">
                 <h5 class="download-text">Reports</h5>
               </a>
             </div>
