--- a/reports.html
+++ b/reports.html
@@ -128,7 +128,7 @@
       </a>
       <nav role="navigation" class="w-nav-menu">
         <a href="contact.html" class="navlink w-nav-link">تواصل معنا</a>
-        <a href="en/projects.html" class="navlink w-nav-link">المشاريع</a>
+        <a href="projects.html" class="navlink w-nav-link">المشاريع</a>
         <a href="about.html" class="navlink last w-nav-link">عن كالـما</a>
         <a href="en/home.html" class="navlink last w-nav-link">|EN</a>
       </nav>
