--- a/en/reports.html
+++ b/en/reports.html
@@ -89,7 +89,7 @@
   <div class="mobile-menu">
     <div class="w-layout-blockcontainer container w-container">
       <div class="mobile-menu-content-wrapper">
-        <a href="../index.html" class="mobile-page-link w-inline-block">
+        <a href="../en/home.html" class="mobile-page-link w-inline-block">
           <div class="mobile-logo-wrapper"><img src="../images/FULL-LOCKUP-04.png" loading="lazy" alt="" class="image"></div>
         </a>
         <div class="mobile-lottie-wrapper">
@@ -232,16 +232,16 @@
           <div id="w-node-_0beb339e-1953-658d-b0ff-7d739ede1b52-9ede1b44" class="download-div arabic">
             <h5 class="download-heading">Downloads</h5>
             <div class="download-element-div arabic">
-              <a href="../brochures.html" class="page-link w-inline-block">
+              <a href="../en/brochures.html" class="page-link w-inline-block">
                 <h5 class="download-text">Brochures</h5>
               </a>
-              <a href="../floorplans.html" class="page-link w-inline-block">
+              <a href="../en/floorplans.html" class="page-link w-inline-block">
                 <h5 class="download-text">Floorplans</h5>
               </a>
-              <a href="../factsheets.html" class="page-link w-inline-block">
+              <a href="../en/factsheets.html" class="page-link w-inline-block">
                 <h5 class="download-text">Factsheets</h5>
               </a>
-              <a href="../reports.html" class="page-link w-inline-block">
+              <a href="../en/reports.html" class="page-link w-inline-block">
                 <h5 class="download-text">Reports</h5>
               </a>
             </div>
