feat(projects): update project images and content across multiple pages
- Replace placeholder images with actual project images in CSS and HTML files
- Add RTL styling fixes for Arabic project pages
- Update project documentation links and button texts
- Add new ongoing residential projects to home pages

--- a/en/factsheets.html
+++ b/en/factsheets.html
@@ -164,45 +164,45 @@
               <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
                 <div class="project-grid">
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="../images/Asset-5_3.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/Asset-5_3-p-500.jpg 500w, ../images/Asset-5_3-p-800.jpg 800w, ../images/Asset-5_3-p-1080.jpg 1080w, ../images/Asset-5_3-p-1600.jpg 1600w, ../images/Asset-5_3.JPG 1920w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="../images/Projects/calma tower/RECEPTION copy.png" loading="lazy" alt="Calma Tower" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">Calma Tower</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Factsheet</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="../images/Asset-3_1.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/Asset-3_1-p-500.jpg 500w, ../images/Asset-3_1-p-800.jpg 800w, ../images/Asset-3_1-p-1080.jpg 1080w, ../images/Asset-3_1.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="../images/Projects/HT210 حطين/HT210_-__1_Page_1.png" loading="lazy" alt="HT210 Hittin" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">HT210 Hittin</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Factsheet</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="../images/Asset-3_2.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/Asset-3_2-p-500.jpg 500w, ../images/Asset-3_2-p-800.jpg 800w, ../images/Asset-3_2-p-1080.jpg 1080w, ../images/Asset-3_2.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="../images/Projects/النــخـيل NK250/nk250-1.png" loading="lazy" alt="NK250 Al Nakheel" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">NK250 Al Nakheel</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Factsheet</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="../images/Asset-1.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/Asset-1-p-500.jpg 500w, ../images/Asset-1-p-800.jpg 800w, ../images/Asset-1-p-1080.jpg 1080w, ../images/Asset-1-p-1600.jpg 1600w, ../images/Asset-1.JPG 1920w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="../images/Projects/One Tower/on-1.png" loading="lazy" alt="One Tower" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">One Tower</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Factsheet</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="../images/Asset-4_1.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/Asset-4_1-p-500.jpg 500w, ../images/Asset-4_1-p-800.jpg 800w, ../images/Asset-4_1-p-1080.jpg 1080w, ../images/Asset-4_1.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="../images/Projects/RM240 الرمال/01.png" loading="lazy" alt="RM240 Al Rimal" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">RM240 Al Rimal</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Factsheet</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="../images/Asset-2_2.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/Asset-2_2-p-500.jpg 500w, ../images/Asset-2_2-p-800.jpg 800w, ../images/Asset-2_2-p-1080.jpg 1080w, ../images/Asset-2_2.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="../images/Projects/GH220 الغدير/IMG_1621.jpg" loading="lazy" alt="GH220 Al Ghadir" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">GH220 Al Ghadir</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Factsheet</a>
                     </div>
                   </div>
                 </div>
