--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ Author: @Goodnbad.exe
                     <div class="image-wrapper slider"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Calma_KSR_ex07_Final02_2025-05-28-p-500.jpg 500w, images/Calma_KSR_ex07_Final02_2025-05-28-p-800.jpg 800w, images/Calma_KSR_ex07_Final02_2025-05-28-p-1080.jpg 1080w, images/Calma_KSR_ex07_Final02_2025-05-28-p-1600.jpg 1600w, images/Calma_KSR_ex07_Final02_2025-05-28.JPG 1920w" alt="" src="images/Calma_KSR_ex07_Final02_2025-05-28.JPG" loading="lazy" class="image"></div>
                   </div>
                   <div class="w-slide">
-                    <div class="image-wrapper slider"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9750366210938px" srcset="images/Asset-3-p-500.jpg 500w, images/Asset-3-p-800.jpg 800w, images/Asset-3-p-1080.jpg 1080w, images/Asset-3-p-1600.jpg 1600w, images/Asset-3.JPG 1920w" alt="" src="images/Asset-3.JPG" loading="lazy" class="image"></div>
+        <div class="image-wrapper slider"><img src="images/Projects/calma tower/RECEPTION copy.png" alt="Calma Tower" loading="lazy" class="image"></div>
                   </div>
                   <div class="w-slide">
                     <div class="image-wrapper slider"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/GH210-GH220-p-500.jpg 500w, images/GH210-GH220-p-800.jpg 800w, images/GH210-GH220-p-1080.jpg 1080w, images/GH210-GH220.JPG 1280w" alt="" src="images/GH210-GH220.JPG" loading="lazy" class="image"></div>
@@ -433,7 +433,7 @@ Author: @Goodnbad.exe
               </div>
             </div>
             <div class="w-layout-cell">
-              <div class="image-wrapper residents"><img class="image" src="images/Asset-6.JPG" alt="" style="-webkit-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" data-w-id="62e83f71-fa10-d621-7c5e-1b5aadde244f" loading="lazy" srcset="images/Asset-6-p-500.jpg 500w, images/Asset-6-p-800.jpg 800w, images/Asset-6-p-1080.jpg 1080w, images/Asset-6-p-1600.jpg 1600w, images/Asset-6.JPG 1920w"></div>
+        <div class="image-wrapper residents"><img class="image" src="images/Projects/GH220 الغدير/IMG_1621.jpg" alt="GH220 الغدير" style="-webkit-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="62e83f71-fa10-d621-7c5e-1b5aadde244f" loading="lazy"></div>
             </div>
           </div>
           <div class="center-align-div arabic">
@@ -524,6 +524,82 @@ Author: @Goodnbad.exe
                         <h5 class="speaker-name">أدوار سكنية</h5>
                         <h3 class="speaker-name project">NK250</h3>
                         <h4 class="speaker-name area">حي النخيل</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Additional ongoing residential projects -->
+                <div class="speaker-slide w-slide">
+                  <div class="speaker-slide-content">
+                    <div class="slide-image">
+                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="member-image four"></div>
+                    </div>
+                    <div class="speaker-info">
+                      <div class="clip-text speaker-headding">
+                        <h5 class="speaker-name">أدوار سكنية</h5>
+                        <h3 class="speaker-name project">SA230</h3>
+                        <h4 class="speaker-name area">حي الصفا</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-slide w-slide">
+                  <div class="speaker-slide-content">
+                    <div class="slide-image">
+                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="member-image five"></div>
+                    </div>
+                    <div class="speaker-info">
+                      <div class="clip-text speaker-headding">
+                        <h5 class="speaker-name">أدوار سكنية</h5>
+                        <h3 class="speaker-name project">YS190</h3>
+                        <h4 class="speaker-name area">حي الياسمين</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-slide w-slide">
+                  <div class="speaker-slide-content">
+                    <div class="slide-image">
+                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="member-image seven"></div>
+                    </div>
+                    <div class="speaker-info">
+                      <div class="clip-text speaker-headding">
+                        <h5 class="speaker-name">أدوار سكنية</h5>
+                        <h3 class="speaker-name project">YS200</h3>
+                        <h4 class="speaker-name area">حي الياسمين</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-slide w-slide">
+                  <div class="speaker-slide-content">
+                    <div class="slide-image">
+                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="member-image eight"></div>
+                    </div>
+                    <div class="speaker-info">
+                      <div class="clip-text speaker-headding">
+                        <h5 class="speaker-name">أدوار سكنية</h5>
+                        <h3 class="speaker-name project">JN130</h3>
+                        <h4 class="speaker-name area">حي الجنادرية</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-slide w-slide">
+                  <div class="speaker-slide-content">
+                    <div class="slide-image">
+                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="member-image nine"></div>
+                    </div>
+                    <div class="speaker-info">
+                      <div class="clip-text speaker-headding">
+                        <h5 class="speaker-name">أدوار سكنية</h5>
+                        <h3 class="speaker-name project">HT260</h3>
+                        <h4 class="speaker-name area">حي حطين</h4>
                       </div>
                     </div>
                   </div>
