--- a/brochures.html
+++ b/brochures.html
@@ -164,45 +164,45 @@
               <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
                 <div class="project-grid">
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="images/Asset-5_3.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/Asset-5_3-p-500.jpg 500w, images/Asset-5_3-p-800.jpg 800w, images/Asset-5_3-p-1080.jpg 1080w, images/Asset-5_3-p-1600.jpg 1600w, images/Asset-5_3.JPG 1920w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="images/Projects/HT260 ادوار حطين/حطين - HT260-1.png" loading="lazy" alt="HT260 ادوار حطين" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">HT260 ادوار حطين</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">تحميل الكتيب</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="images/Asset-3_1.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/Asset-3_1-p-500.jpg 500w, images/Asset-3_1-p-800.jpg 800w, images/Asset-3_1-p-1080.jpg 1080w, images/Asset-3_1.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="images/Projects/HT210 حطين/HT210_-__1_Page_1.png" loading="lazy" alt="HT210 حطين" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">HT210 حطين</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">تحميل الكتيب</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="images/Asset-3_2.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/Asset-3_2-p-500.jpg 500w, images/Asset-3_2-p-800.jpg 800w, images/Asset-3_2-p-1080.jpg 1080w, images/Asset-3_2.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="images/Projects/النــخـيل NK250/nk250-1.png" loading="lazy" alt="NK250 النــخـيل" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">NK250 النــخـيل</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">تحميل الكتيب</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="images/Asset-1.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/Asset-1-p-500.jpg 500w, images/Asset-1-p-800.jpg 800w, images/Asset-1-p-1080.jpg 1080w, images/Asset-1-p-1600.jpg 1600w, images/Asset-1.JPG 1920w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="images/Projects/JN130 الجنادرية/jn130-1.png" loading="lazy" alt="JN130 الجنادرية" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">JN130 الجنادرية</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">تحميل الكتيب</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="images/Asset-4_1.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/Asset-4_1-p-500.jpg 500w, images/Asset-4_1-p-800.jpg 800w, images/Asset-4_1-p-1080.jpg 1080w, images/Asset-4_1.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="images/Projects/RM240 الرمال/01.png" loading="lazy" alt="RM240 الرمال" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">RM240 الرمال</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">تحميل الكتيب</a>
                     </div>
                   </div>
                   <div class="project-grid-main-wrapper">
-                    <div class="grid-image-wrapper"><img src="images/Asset-2_2.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/Asset-2_2-p-500.jpg 500w, images/Asset-2_2-p-800.jpg 800w, images/Asset-2_2-p-1080.jpg 1080w, images/Asset-2_2.JPG 1280w" class="image"></div>
+                    <div class="grid-image-wrapper"><img src="images/Projects/GH220 الغدير/IMG_1621.jpg" loading="lazy" alt="GH220 الغدير" class="image"></div>
                     <div class="project-grid-details-wrapper">
                       <h3 class="project-grid-name">GH220 الغدير</h3>
-                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">Download Brochure</a>
+                      <a data-w-id="06a5b62f-43db-eaa7-7126-86acd2dbca64" href="#" class="project-button w-button">تحميل الكتيب</a>
                     </div>
                   </div>
                 </div>
