--- a/projects.html
+++ b/projects.html
@@ -216,10 +216,10 @@
                 <div data-delay="4000" data-animation="slide" class="residential-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                   <div class="mask w-slider-mask">
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-5_1.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Asset-5_1-p-500.jpg 500w, images/Asset-5_1-p-800.jpg 800w, images/Asset-5_1-p-1080.jpg 1080w, images/Asset-5_1-p-1600.jpg 1600w, images/Asset-5_1.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/HT260 ادوار حطين/حطين - HT260-1.png" loading="lazy" alt="HT260 ادوار حطين" class="image"></div>
                     </div>
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-14_2.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/Asset-14_2-p-500.jpg 500w, images/Asset-14_2-p-800.jpg 800w, images/Asset-14_2-p-1080.jpg 1080w, images/Asset-14_2-p-1600.jpg 1600w, images/Asset-14_2.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/HT210 حطين/HT210_-__1_Page_1.png" loading="lazy" alt="HT210 حطين" class="image"></div>
                     </div>
                   </div>
                   <div class="left-arrow-2 w-slider-arrow-left">
@@ -239,7 +239,7 @@
                 <div data-delay="4000" data-animation="slide" class="residential-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                   <div class="mask w-slider-mask">
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-12.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Asset-12-p-500.jpg 500w, images/Asset-12-p-800.jpg 800w, images/Asset-12-p-1080.jpg 1080w, images/Asset-12-p-1600.jpg 1600w, images/Asset-12.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/النــخـيل NK250/nk250-1.png" loading="lazy" alt="NK250 النــخـيل" class="image"></div>
                     </div>
                   </div>
                   <div class="left-arrow-2 w-slider-arrow-left">
@@ -277,10 +277,10 @@
                 <div data-delay="4000" data-animation="slide" class="residential-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                   <div class="mask w-slider-mask">
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/dummy_400x300_ffffff_cccccc_43-1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/dummy_400x300_ffffff_cccccc_43-1-p-500.jpg 500w, images/dummy_400x300_ffffff_cccccc_43-1-p-800.jpg 800w, images/dummy_400x300_ffffff_cccccc_43-1-p-1080.jpg 1080w, images/dummy_400x300_ffffff_cccccc_43-1-p-1600.jpg 1600w, images/dummy_400x300_ffffff_cccccc_43-1.JPG 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/JN130 الجنادرية/jn130-1.png" loading="lazy" alt="JN130 الجنادرية" class="image"></div>
                     </div>
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-14_3.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/Asset-14_3-p-500.jpg 500w, images/Asset-14_3-p-800.jpg 800w, images/Asset-14_3-p-1080.jpg 1080w, images/Asset-14_3-p-1600.jpg 1600w, images/Asset-14_3.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/RM240 الرمال/01.png" loading="lazy" alt="RM240 الرمال" class="image"></div>
                     </div>
                   </div>
                   <div class="left-arrow-2 w-slider-arrow-left">
@@ -300,10 +300,10 @@
                 <div data-delay="4000" data-animation="slide" class="residential-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                   <div class="mask w-slider-mask">
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/dummy_400x300_ffffff_cccccc_43-3.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/dummy_400x300_ffffff_cccccc_43-3-p-500.jpg 500w, images/dummy_400x300_ffffff_cccccc_43-3-p-800.jpg 800w, images/dummy_400x300_ffffff_cccccc_43-3-p-1080.jpg 1080w, images/dummy_400x300_ffffff_cccccc_43-3-p-1600.jpg 1600w, images/dummy_400x300_ffffff_cccccc_43-3.JPG 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/calma tower/RECEPTION copy.png" loading="lazy" alt="Calma Tower" class="image"></div>
                     </div>
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-9.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Asset-9-p-500.jpg 500w, images/Asset-9-p-800.jpg 800w, images/Asset-9-p-1080.jpg 1080w, images/Asset-9-p-1600.jpg 1600w, images/Asset-9.JPG 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/GH220 الغدير/IMG_1621.jpg" loading="lazy" alt="GH220 الغدير" class="image"></div>
                     </div>
                   </div>
                   <div class="left-arrow-2 w-slider-arrow-left">
@@ -341,10 +341,10 @@
                 <div data-delay="4000" data-animation="slide" class="residential-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                   <div class="mask w-slider-mask">
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-14.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Asset-14-p-500.jpg 500w, images/Asset-14-p-800.jpg 800w, images/Asset-14-p-1080.jpg 1080w, images/Asset-14-p-1600.jpg 1600w, images/Asset-14.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/One Tower/on-1.png" loading="lazy" alt="One Tower" class="image"></div>
                     </div>
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-5_2.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Asset-5_2-p-500.jpg 500w, images/Asset-5_2-p-800.jpg 800w, images/Asset-5_2-p-1080.jpg 1080w, images/Asset-5_2-p-1600.jpg 1600w, images/Asset-5_2.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/HT260 ادوار حطين/حطين - HT260-1.png" loading="lazy" alt="HT260 ادوار حطين" class="image"></div>
                     </div>
                   </div>
                   <div class="left-arrow-2 w-slider-arrow-left">
@@ -364,10 +364,10 @@
                 <div data-delay="4000" data-animation="slide" class="residential-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                   <div class="mask w-slider-mask">
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-5.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/Asset-5-p-500.jpg 500w, images/Asset-5-p-800.jpg 800w, images/Asset-5-p-1080.jpg 1080w, images/Asset-5-p-1600.jpg 1600w, images/Asset-5.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/HT210 حطين/HT210_-__1_Page_1.png" loading="lazy" alt="HT210 حطين" class="image"></div>
                     </div>
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-14_1.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Asset-14_1-p-500.jpg 500w, images/Asset-14_1-p-800.jpg 800w, images/Asset-14_1-p-1080.jpg 1080w, images/Asset-14_1-p-1600.jpg 1600w, images/Asset-14_1.jpg 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/النــخـيل NK250/nk250-1.png" loading="lazy" alt="NK250 النــخـيل" class="image"></div>
                     </div>
                   </div>
                   <div class="left-arrow-2 w-slider-arrow-left">
@@ -405,10 +405,10 @@
                 <div data-delay="4000" data-animation="slide" class="residential-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                   <div class="mask w-slider-mask">
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-2.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/Asset-2-p-500.jpg 500w, images/Asset-2-p-800.jpg 800w, images/Asset-2-p-1080.jpg 1080w, images/Asset-2-p-1600.jpg 1600w, images/Asset-2.JPG 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/RM240 الرمال/01.png" loading="lazy" alt="RM240 الرمال" class="image"></div>
                     </div>
                     <div class="w-slide">
-                      <div class="residential-slider-image-wrap"><img src="images/Asset-1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/Asset-1-p-500.jpg 500w, images/Asset-1-p-800.jpg 800w, images/Asset-1-p-1080.jpg 1080w, images/Asset-1-p-1600.jpg 1600w, images/Asset-1.JPG 1920w" alt="" class="image"></div>
+                      <div class="residential-slider-image-wrap"><img src="images/Projects/GH220 الغدير/IMG_1621.jpg" loading="lazy" alt="GH220 الغدير" class="image"></div>
                     </div>
                   </div>
                   <div class="left-arrow-2 w-slider-arrow-left">
@@ -797,10 +797,10 @@
               <div data-delay="4000" data-animation="slide" class="commercial-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                 <div class="w-slider-mask">
                   <div class="w-slide">
-                    <div class="commercial-project-img-wrapper"><img src="images/Calma_KSR_ex01_Final02_2025-05-28.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Calma_KSR_ex01_Final02_2025-05-28-p-500.jpg 500w, images/Calma_KSR_ex01_Final02_2025-05-28-p-800.jpg 800w, images/Calma_KSR_ex01_Final02_2025-05-28-p-1080.jpg 1080w, images/Calma_KSR_ex01_Final02_2025-05-28-p-1600.jpg 1600w, images/Calma_KSR_ex01_Final02_2025-05-28.JPG 1920w" alt="" class="image"></div>
+                    <div class="commercial-project-img-wrapper"><img src="images/Projects/calma tower/RECEPTION copy.png" loading="lazy" alt="Calma Tower Reception" class="image"></div>
                   </div>
                   <div class="w-slide">
-                    <div class="commercial-project-img-wrapper"><img src="images/Calma_KSR_ex03_Final02_2025-05-28.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Calma_KSR_ex03_Final02_2025-05-28-p-500.jpg 500w, images/Calma_KSR_ex03_Final02_2025-05-28-p-800.jpg 800w, images/Calma_KSR_ex03_Final02_2025-05-28-p-1080.jpg 1080w, images/Calma_KSR_ex03_Final02_2025-05-28-p-1600.jpg 1600w, images/Calma_KSR_ex03_Final02_2025-05-28.JPG 1920w" alt="" class="image"></div>
+                    <div class="commercial-project-img-wrapper"><img src="images/Projects/calma tower/POOL.jpg" loading="lazy" alt="Calma Tower Pool" class="image"></div>
                   </div>
                 </div>
                 <div class="left-arrow-3 w-slider-arrow-left">
@@ -818,10 +818,10 @@
               <div data-delay="4000" data-animation="slide" class="commercial-slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
                 <div class="w-slider-mask">
                   <div class="w-slide">
-                    <div class="commercial-project-img-wrapper"><img src="images/dummy_400x300_ffffff_cccccc_43-1_1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/dummy_400x300_ffffff_cccccc_43-1_1-p-500.jpg 500w, images/dummy_400x300_ffffff_cccccc_43-1_1-p-800.jpg 800w, images/dummy_400x300_ffffff_cccccc_43-1_1-p-1080.jpg 1080w, images/dummy_400x300_ffffff_cccccc_43-1_1-p-1600.jpg 1600w, images/dummy_400x300_ffffff_cccccc_43-1_1.JPG 1920w" alt="" class="image"></div>
+                    <div class="commercial-project-img-wrapper"><img src="images/Projects/calma tower/OUTDOOR LOUNGE.jpg" loading="lazy" alt="Calma Tower Outdoor Lounge" class="image"></div>
                   </div>
                   <div class="w-slide">
-                    <div class="commercial-project-img-wrapper"><img src="images/05.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/05-p-500.jpg 500w, images/05-p-800.jpg 800w, images/05-p-1080.jpg 1080w, images/05.JPG 1127w" alt="" class="image"></div>
+                    <div class="commercial-project-img-wrapper"><img src="images/Projects/calma tower/ELEVATOR LOBBY.jpg" loading="lazy" alt="Calma Tower Elevator Lobby" class="image"></div>
                   </div>
                 </div>
                 <div class="left-arrow-3 w-slider-arrow-left">
